--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3307/balu
+spring.datasource.url = jdbc:mysql://localhost:3306/balu567
 spring.datasource.username = root
 spring.datasource.password = BaLu9502@srav
 spring.jpa.show-sql = true
